--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Die Samsonschule war eine überregional bedeutende jüdische Freischule, die sei
             <a href="https://museumwolfenbuettel.github.io/Gr-nderzeit-/" class="button small-button">14</a>
             
             <!-- Кнопка 6, ведущая на следующую страницу -->
-            <a href="https://museumwolfenbuettel.github.io/Buerger-Museum/" class="button">16</a>
+            <a href="https://museumwolfenbuettel.github.io/1914-bis-1918-Sch-tzengraben-und-Kriegskommune/" class="button">16</a>
         </div>
 
         <!-- Логотип под кнопками -->
